# novella

./: .gitignore  .gitmodules  404.html  index.html  novella.yml  pyproject.toml  readme.md  sitemap.xml
.changelog/: 0.1.1.toml  0.1.10.toml  0.1.11.toml  0.1.12.toml  0.1.13.toml  0.1.14.toml  0.1.15.toml  0.1.2.toml  0.1.3.toml  0.1.4.toml  0.1.5.toml  0.1.6.toml  0.1.7.toml  0.1.8.toml  0.1.9.toml  0.2.0.toml  0.2.1.toml  0.2.2.toml  0.2.3.toml  0.2.4.toml  0.2.5.toml  0.2.6.toml  _unreleased.toml
.github/files/: slam-cli.txt
.github/workflows/: python-package.yml  python.yaml
_old/mkdocs/: python.py
_old/processors/: cat.py  smart_docstrings.py
_old/processors/pydoc/templates/base/: data_table.mako  entrypoint.mako  function_table.mako
actions/: index.html
actions/copy_files/: index.html
actions/run/: index.html
changelog/: index.html
components/Preprocessors/anchor/: index.html
components/Preprocessors/cat/: index.html
components/actions/: index.html
components/actions/copy_files/: index.html
components/actions/preprocess_markdown/: index.html
components/actions/run/: index.html
components/preprocessing/: index.html
components/preprocessing/builtin/: index.html
components/templates_/: index.html
components/templates_/hugo/: index.html
components/templates_/mkdocs/: index.html
concepts/: index.html
docs/: build.novella  mkdocs.yml  novella.yml
docs/content/: actions.md  api.md  changelog.md  concepts.md  index.md  processors.md  templates.md
docs/content/components/Preprocessors/: anchor.md  cat.md
docs/content/components/actions/: copy_files.md  index.md  preprocess_markdown.md  run.md
docs/content/components/preprocessing/: builtin.md
docs/content/components/templates_/: hugo.md  index.md  mkdocs.md
docs/content/guides/: github.md
docs/content/preprocessing/: builtin.md  index.md
examples/hugo/: .gitignore  README.md  build.novella
examples/hugo/content/posts/: my-first-post.md
examples/mkdocs/: README.md  build.novella
examples/mkdocs/docs/: index.md
guides/github/: index.html
preprocessing/: index.html
preprocessing/builtin/: index.html
search/: search_index.json
src/novella/: __init__.py  __main__.py  action.py  api.py  build.py  compat.py  context.py  graph.py  novella.py  pipeline.py  processor.py  repository.py  template.py
src/novella/actions/: copy_files.py  process_markdown.py  python.py  run.py
src/novella/actions/mkdocs/: __init__.py
src/novella/actions/process_markdown/: __init__.py  _cat.py  _novella_tag.py  action.py  api.py
src/novella/core/: __init__.py  __main__.py  _config.py  _context.py  _copy_files.py  _mkdocs.py  _pipeline.py  _python.py  context.py  pipeline.py  util.py
src/novella/core/_process_markdown/: __init__.py  _cat.py  _pydoc.py
src/novella/core/actions/: copy_files.py  process_markdown.py  python.py
src/novella/core/data/mkdocs/profiles/default/: mkdocs.yml
src/novella/core/post/: __init__.py  _api.py  _tag.py
src/novella/core/post/processors/: cat.py  pydoc.py
src/novella/core/render/mkdocs/: __init__.py
src/novella/core/render/python_api/: __init__.py  _api.py  _default.py
src/novella/markdown/: flavor.py  preprocessor.py  processor.py  tagparser.py  tags.py
src/novella/markdown/tags/: anchor.py  cat.py  shell.py
src/novella/processors/: base.py  cat_tag.py  smart_docstrings.py
src/novella/processors/docstrings/: smart.py
src/novella/processors/markdown/: cat.py  pydoc.py
src/novella/processors/pydoc/: __init__.py  jinja_renderer.py  loader.py  tag.py
src/novella/processors/pydoc/templates/: class.jinja  function.jinja
src/novella/processors/pydoc/templates/base/: class.mako  class_attrs_table.mako  data.mako  data_table.mako  entrypoint.mako  function.mako  function_table.mako  helpers.mako
src/novella/processors/pydoc_tag/: loader.py  pydoc_tag.py
src/novella/processors/pydoc_tag/templates/: api_object.jinja  api_object.mako  class.jinja  class.mako  function.jinja  function.mako  helpers.mako
src/novella/processors/pydoc_tag/templates/base/: data.mako
src/novella/render/: jinja_renderer.py
src/novella/render/templates/: class.jinja
src/novella/tags/: anchor.py  cat.py  shell.py
src/novella/templates/: mkdocs.py  mkdocs.yml
src/novella/templates/hugo/: __init__.py  installer.py
src/novella/templates/mkdocs/: __init__.py  mkdocs.yml
templates_/: index.html
templates_/mkdocs/: index.html
tests/: test_novella_markdown_tagparser.py  test_novella_markdown_tags.py  test_pdmd_core.py
